# OpenHarness

./: .gitignore  AGENTS-CN.md  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  ClaudeCode技术分析文档.md  OpenHarness-native-agent-rewrite-plan.md  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  桌面端应用实现文档.md  模型提供商实现文档.md  消费级桌面AI Coding工具项目设计与提示词.md
.github/workflows/: build.yml  ci.yml  desktop-package.yml  nightly.yml
MiniApp/Demo/git-graph/: README.md
MiniApp/Skills/miniapp-dev/: SKILL.md  api-reference.md  architecture.md
OpenHarness-Installer/: README.md  index.html  package-lock.json  package.json
OpenHarness-Installer/scripts/: build-installer.cjs  sync-theme-i18n.cjs
OpenHarness-Installer/src-tauri/: Cargo.toml  tauri.conf.json
OpenHarness-Installer/src-tauri/src/: lib.rs  main.rs
OpenHarness-Installer/src/components/: WindowControls.tsx
OpenHarness-Installer/src/data/: modelProviders.ts
OpenHarness-Installer/src/pages/: LanguageSelect.tsx  ThemeSetup.tsx
OpenHarness-Installer/src/theme/: installerThemeRuntime.ts  installerThemesData.ts
docs/: agentmemory-integration-plan.zh-CN.md  claude-code-agent-alignment-status.zh-CN.md  unified-execution-plan.zh-CN.md
docs/remote-connect/: feishu-bot-setup.md  feishu-bot-setup.zh-CN.md
scripts/: desktop-tauri-build.mjs  dev.cjs  ensure-openssl-windows.mjs  generate-version.cjs  mobile-web-build.cjs
src/crates/api-layer/: Cargo.toml
src/crates/api-layer/src/: handlers.rs  lib.rs
src/crates/relay-shared/: Cargo.toml
src/crates/relay-shared/src/: lib.rs
src/crates/transport/: Cargo.toml
src/crates/transport/src/: emitter.rs  event_bus.rs  lib.rs  traits.rs
src/crates/transport/src/adapters/: cli.rs  tauri.rs  websocket.rs
src/mobile-web/: index.html  package-lock.json  package.json  vite.config.ts
src/web-ui/: README.md  README.zh-CN.md  index.html  package.json  preview.html  vite.config.ts
tests/e2e/: .gitignore  E2E-TESTING-GUIDE.md  E2E-TESTING-GUIDE.zh-CN.md  README.md  README.zh-CN.md  package-lock.json  package.json
tooling/lib/: runtime.cjs
(+1684 files in other folders)
