[package]
name = "openharness-relay-shared"
version = "0.2.2"
edition = "2021"
description = "Shared relay types (RoomManager, WebAssetStore) for embedded and standalone relay"

[dependencies]
chrono = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
